Ticket #27849: Added additional function to retrieve a value from theme.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -712,6 +712,8 @@ com.top_logic.model.search.expr.config.operations.web.ColorValues$Builder = Buil
 com.top_logic.model.search.expr.config.operations.web.ColorValues$Builder.tooltip = <i>Method builder</i> creating <i>color values</i>.
 com.top_logic.model.search.expr.config.operations.web.ContextPath$Builder = Builder
 com.top_logic.model.search.expr.config.operations.web.ContextPath$Builder.tooltip = <i>Method builder</i> creating <i>context path</i>.
+com.top_logic.model.search.expr.config.operations.web.ResolveThemeVar$Builder = Builder
+com.top_logic.model.search.expr.config.operations.web.ResolveThemeVar$Builder.tooltip = <i>Method builder</i> creating <i>resolve theme var</i> operation.
 com.top_logic.model.search.expr.reductions.Average$Builder = Builder
 com.top_logic.model.search.expr.reductions.Average$Builder.tooltip = <i>Method builder</i> creating <i>average</i>.
 com.top_logic.model.search.expr.reductions.Max$Builder = Builder
