--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -90,6 +90,7 @@ class.com.top_logic.layout.form.control.I18NConstants.SET_VALUE_CLOSE_POPUP = Se
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_COMPLETED_COMMAND = Upload completed callback
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_LABEL = Choose file
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_LABEL.tooltip = Opens the file chooser for uploading a file.
+class.com.top_logic.layout.form.format.I18NConstants.ERROR_INVALID_COLOR_FORMAT__VALUE = Invalid color specification: {0}
 class.com.top_logic.layout.form.model.I18NConstants.DATE_TIME_FIELD_NO_DATE_VALUE__VALUE = The day value can not be parsed: {0}
 class.com.top_logic.layout.form.model.I18NConstants.DATE_TIME_FIELD_NO_TIME_VALUE__VALUE = The time value can not be parsed: {0}
 class.com.top_logic.layout.form.values.edit.editor.I18NConstants.COLLAPSE_ALL_ENTRIES_IN_LIST = Collapse all
