--- a/com.top_logic.xio/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.xio/src/main/java/META-INF/messages_de.properties
@@ -163,7 +163,7 @@ com.top_logic.xio.importer.handlers.ResKeyUpdate = Aktualisierung eines Ressourc
 com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.language = Sprache
 com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.language.tooltip = Die zu aktualisierende Sprache.
 com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.xml-attribute = XML-Attribut
-com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.xml-attribute.tooltip = Das zu lesende XML-Attribut.
+com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.xml-attribute.tooltip = Das zu lesende XML-Attribut. <p> Wird es nicht angegeben, wird stattdessen der Textinhalt des aktuellen Elements gelesen. </p>
 com.top_logic.xio.importer.handlers.ResKeyUpdate.tooltip = <i>Handler</i>, der einer Eigenschaft des Modells vom Typ <i>Ressourcenschlüssel</i> eine Übersetzung einer bestimmten Sprache hinzufügt.
 com.top_logic.xio.importer.handlers.ScopedImportHandler = Wechsel des Kontexts
 com.top_logic.xio.importer.handlers.ScopedImportHandler.Config.argument-var = Argument var
