--- a/com.top_logic.xio/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.xio/src/main/java/META-INF/messages_en.properties
@@ -163,7 +163,7 @@ com.top_logic.xio.importer.handlers.ResKeyUpdate = Resource key update
 com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.language = Language
 com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.language.tooltip = The language to assign.
 com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.xml-attribute = XML attribute
-com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.xml-attribute.tooltip = The XML attribute to read.
+com.top_logic.xio.importer.handlers.ResKeyUpdate.Config.xml-attribute.tooltip = The XML attribute to read. <p> If not given, the text content of the current element is read instead. </p>
 com.top_logic.xio.importer.handlers.ResKeyUpdate.tooltip = <i>Handler</i> adding a translation of a certain language to a model property of type <i>resource key</i>.
 com.top_logic.xio.importer.handlers.ScopedImportHandler = Scoped import handler
 com.top_logic.xio.importer.handlers.ScopedImportHandler.Config.argument-var = Argument var
