Ticket #28607: Updated error message.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -136,7 +136,7 @@ class.com.top_logic.layout.table.export.I18NConstants.EXTRACTING_TABLE_DATA = Ex
 class.com.top_logic.layout.table.export.I18NConstants.PERFORMING_EXPORT = Exportieren nach Excel
 class.com.top_logic.layout.table.export.I18NConstants.PREPARING_DOWNLOAD = Download vorbereiten.
 class.com.top_logic.layout.table.export.I18NConstants.STARTING_EXPORT = Export starten.
-class.com.top_logic.layout.table.model.I18NConstants.NO_SUCH_COLUMN__COLUMN = Es gibt keine Spalte mit dem Namen {0}.
+class.com.top_logic.layout.table.model.I18NConstants.NO_SUCH_COLUMN__COLUMN = Es gibt keine Spalte mit dem Identifier {0}. Es ist wichtig, dass die inneren Spalten in einer vorherigen Spaltenkonfiguration definiert werden, bevor sie in einer Spaltengruppenkonfiguration verwendet werden.
 class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_NAME = Die Eigenschaft {1} ist nicht auf {0} definiert.
 class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_NAME_AVAILABLE = Die Eigenschaft {1} ist auf {0} nicht definiert. Verfügbare Eigenschaften sind: {2}
 class.com.top_logic.layout.window.I18NConstants.WINDOW_TEMPLATE_INSTANTIATION_FAILED__TEMPLATE = Das Öffnen des Fensters schlug fehl.
