--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -136,7 +136,7 @@ class.com.top_logic.layout.table.export.I18NConstants.EXTRACTING_TABLE_DATA = Ex
 class.com.top_logic.layout.table.export.I18NConstants.PERFORMING_EXPORT = Exporting to Excel
 class.com.top_logic.layout.table.export.I18NConstants.PREPARING_DOWNLOAD = Preparing download.
 class.com.top_logic.layout.table.export.I18NConstants.STARTING_EXPORT = Starting export.
-class.com.top_logic.layout.table.model.I18NConstants.NO_SUCH_COLUMN__COLUMN = There is no column with name {0}.
+class.com.top_logic.layout.table.model.I18NConstants.NO_SUCH_COLUMN__COLUMN = There is no column with the identifier {0}. It is important that the inner columns are defined in a previous column configuration before it is used in a column group configuration.
 class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_NAME = The property {1} is not defined on {0}.
 class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_NAME_AVAILABLE = The property {1} is not defined on {0}. Available properties are: {2}
 class.com.top_logic.layout.window.I18NConstants.WINDOW_TEMPLATE_INSTANTIATION_FAILED__TEMPLATE = Opening the window failed.
