--- a/com.top_logic.addons.loginmessages/src/main/webapp/WEB-INF/conf/resources/model.LoginMessages.messages_en.properties
+++ b/com.top_logic.addons.loginmessages/src/main/webapp/WEB-INF/conf/resources/model.LoginMessages.messages_en.properties
@@ -8,7 +8,7 @@ model.LoginMessages.LoginMessage.confirmExpirationDate = Confirmation expiration
 model.LoginMessages.LoginMessage.endDate = Valid to
 model.LoginMessages.LoginMessage.endDate.tooltip = Expiration date of the login message. If a date is set, the login message is only displayed if the user's login time is before this date.
 model.LoginMessages.LoginMessage.message = Message
-model.LoginMessages.LoginMessage.message.tooltip = The content of the message to be displayed to a user after login.\ 
+model.LoginMessages.LoginMessage.message.tooltip = The content of the message to be displayed to a user after login.
 model.LoginMessages.LoginMessage.name = Name
 model.LoginMessages.LoginMessage.startDate = Valid from
 model.LoginMessages.LoginMessage.startDate.tooltip = If a date is set, the login message is only displayed if the user's login time is after this date (not before the date).
