--- a/com.top_logic.addons.loginmessages/src/main/webapp/WEB-INF/conf/resources/model.LoginMessages.messages_de.properties
+++ b/com.top_logic.addons.loginmessages/src/main/webapp/WEB-INF/conf/resources/model.LoginMessages.messages_de.properties
@@ -1,14 +1,14 @@
 model.LoginMessages = Login-Meldungen
 model.LoginMessages.LoginMessage = Login-Meldung
 model.LoginMessages.LoginMessage.active = Aktiv
-model.LoginMessages.LoginMessage.active.tooltip = Nur eine aktive Login-Meldung wird einem Nutzer nach dem Login zur Bestätigung angezeigt. Statt eine eine Login-Meldung zu löschen, kann diese inaktiv geschaltet um sie bei Bedarf später wieder zu aktivieren.
+model.LoginMessages.LoginMessage.active.tooltip = Nur eine aktive Login-Meldung wird einem Nutzer nach dem Login zur Bestätigung angezeigt. Statt eine Login-Meldung zu löschen, kann diese inaktiv geschaltet um sie bei Bedarf später wieder zu aktivieren.
 model.LoginMessages.LoginMessage.confirmDuration = Bestätigungsintervall (in Tagen)
 model.LoginMessages.LoginMessage.confirmDuration.tooltip = Intervall in Tagen, nach dem eine Meldung einem Nutzer erneut angezeigt wird. Wenn kein Wert angegeben ist, handelt es sich um eine einmalige Bestätigung (wird jedem Nutzer nur einmal angezeigt). Der Wert 0 steht für eine Bestätigung, die nach jeder Anmeldung erneut angezeigt wird.
 model.LoginMessages.LoginMessage.confirmExpirationDate = Bestätigungsverfall
 model.LoginMessages.LoginMessage.endDate = Gültig bis
 model.LoginMessages.LoginMessage.endDate.tooltip = Ablaufdatum der Login-Meldung. Wenn ein Datum gesetzt ist, dann wird die Login-Meldung nur dann angezeigt, wenn der Anmeldezeitpunkt des Nutzers vor diesem Datum liegt.
 model.LoginMessages.LoginMessage.message = Meldung
-model.LoginMessages.LoginMessage.message.tooltip = Der Inhalt der Meldung, die einem Nutzer nach dem Login angezeigt werden soll.\ 
+model.LoginMessages.LoginMessage.message.tooltip = Der Inhalt der Meldung, die einem Nutzer nach dem Login angezeigt werden soll.
 model.LoginMessages.LoginMessage.name = Bezeichnung
 model.LoginMessages.LoginMessage.startDate = Gültig von
 model.LoginMessages.LoginMessage.startDate.tooltip = Wenn ein Datum gesetzt ist, dann wird die Login-Meldung nur dann angezeigt, wenn der Anmeldezeitpunkt des Nutzer nach diesem Datum liegt (nicht vor dem Datum).
