--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -3946,6 +3946,8 @@ com.top_logic.layout.provider.ConfiguredProxyResourceProvider.tooltip = Konfigur
 com.top_logic.layout.provider.LabelProviderService = Label-Generator
 com.top_logic.layout.provider.LabelProviderService$ContextMenuConfig = Kontextmenü-Eintrag
 com.top_logic.layout.provider.LabelProviderService$ContextMenuConfig.tooltip = Konfiguration typspezifischer Kontextmenübefehle.
+com.top_logic.layout.provider.LabelProviderService$ExcelCellRendererConfig = Excel-Zell-Renderer-Konfiguration
+com.top_logic.layout.provider.LabelProviderService$ExcelCellRendererConfig.tooltip = <i>Excel-Zellen-Renderer-Zuweisung</i> zu einer <code>"type"</code>.
 com.top_logic.layout.provider.LabelProviderService$MappingConfig = Zuordnung
 com.top_logic.layout.provider.LabelProviderService$MappingConfig.tooltip = <i>Abbildungszuordnung</i> zu einer <code>"type"</code>.
 com.top_logic.layout.provider.LabelProviderService$PDFRendererConfig = PDF-Renderer-Konfiguration
@@ -3960,6 +3962,8 @@ com.top_logic.layout.provider.LabelProviderService.Config.context-menus = Kontex
 com.top_logic.layout.provider.LabelProviderService.Config.context-menus.tooltip = Konfiguration von typspezifischen Kontextmenüeinträgen.
 com.top_logic.layout.provider.LabelProviderService.Config.default-provider = Standard-Anbieter
 com.top_logic.layout.provider.LabelProviderService.Config.default-provider.tooltip = Der zu verwendende Provider, falls sonst keiner gefunden wird.
+com.top_logic.layout.provider.LabelProviderService.Config.excel-renderers = Excel-Renderer
+com.top_logic.layout.provider.LabelProviderService.Config.excel-renderers.tooltip = Konfigurierte <i>Excel-Zellrenderer</i> für Typen.
 com.top_logic.layout.provider.LabelProviderService.Config.label-providers = Label-Generatoren
 com.top_logic.layout.provider.LabelProviderService.Config.label-providers.tooltip = Konfigurierte <i>Etikettenanbieter</i> für Typen. <p> Die in diesem Abschnitt definierten <i>Label-Provider</i> werden verwendet, wenn der Kontext nur ein einfaches Label (kein Typbild oder Link) verlangt. Wenn in diesem Abschnitt für einen bestimmten Typ kein <i>Label-Provider</i> gefunden wird, wird ein <i>Ressourcen-Provider</i> von <i>Ressourcen-Providern</i> als Fallback verwendet, bevor ein <i>Label-Provider</i> für einen Supertyp in Betracht gezogen wird. </p>
 com.top_logic.layout.provider.LabelProviderService.Config.mappings = Zuordnungen
@@ -3972,6 +3976,8 @@ com.top_logic.layout.provider.LabelProviderService.Config.resource-providers = A
 com.top_logic.layout.provider.LabelProviderService.Config.resource-providers.tooltip = Konfigurierte <i>Ressourcenanbieter</i> für Typen. <p> Die in diesem Abschnitt definierten <i>Ressourcenanbieter</i> werden verwendet, wenn der Kontext mehr als ein einfaches Label erfordert. Wenn in diesem Abschnitt für einen bestimmten Typ kein <i>Ressourcenanbieter</i> gefunden wird, wird ein <i>Label-Provider</i> von <i>Label-Providern</i> als Fallback verwendet, bevor ein <i>Ressourcenanbieter</i> für einen Supertyp in Betracht gezogen wird. Daher könnte es sinnvoll sein, einen benutzerdefinierten <i>Ressourcen-Provider</i> für einen bestimmten Typ zu definieren, wenn der für diesen Typ definierte <i>Label-Provider</i> nicht de facto ein <i>Ressourcen-Provider</i> ist. </p>
 com.top_logic.layout.provider.LabelProviderService.ContextMenuConfig.commands = Befehle
 com.top_logic.layout.provider.LabelProviderService.ContextMenuConfig.commands.tooltip = Typspezifische Befehle, die zu den Kontextmenüs für den angegebenen <i>Typ</i> hinzugefügt werden.
+com.top_logic.layout.provider.LabelProviderService.ExcelCellRendererConfig.implementation = Implementierung
+com.top_logic.layout.provider.LabelProviderService.ExcelCellRendererConfig.implementation.tooltip = Die <i>Excel-Zellen-Renderer-Implementierung</i> für den angegebenen <i>Typ</i>.
 com.top_logic.layout.provider.LabelProviderService.MappingConfig.implementation = Umsetzung
 com.top_logic.layout.provider.LabelProviderService.MappingConfig.implementation.tooltip = Die <i>Mapping-Implementierung</i> für den angegebenen <i>Typ</i>.
 com.top_logic.layout.provider.LabelProviderService.PDFRendererConfig.implementation = Umsetzung
@@ -8330,6 +8336,10 @@ com.top_logic.tool.export.FormattedValueExcelRenderer = Excel-Renderer für forma
 com.top_logic.tool.export.FormattedValueExcelRenderer.Config.format = Format
 com.top_logic.tool.export.FormattedValueExcelRenderer.Config.format.tooltip = Das Datenformat für die Excel-Zelle.
 com.top_logic.tool.export.FormattedValueExcelRenderer.tooltip = <i>Excel-Zellen-Renderer</i>, der einen <i>Excel-Wert</i> mit einem gegebenen <i>Wert</i> erstellt. <p> Es wird erwartet, dass der Wert des Tabellenmodells ein einfacher Wert ist, z.B. <i>Double</i>, <i>String</i> oder <i>Datum</i>. Komplexe Werte wie <i>Kollektionen</i> oder <i>Formularfelder</i> werden nicht unterstützt. </p>
+com.top_logic.tool.export.MappingExcelCellRenderer = Abbildung von Excel-Zellrenderer
+com.top_logic.tool.export.MappingExcelCellRenderer.Config.excel-mapping = Excel-Abbildung
+com.top_logic.tool.export.MappingExcelCellRenderer.Config.excel-mapping.tooltip = Die anzuwendende Abbildung für den Export.
+com.top_logic.tool.export.MappingExcelCellRenderer.tooltip = Export von Kontowerten nach Excel einschließlich des Anmeldenamens.
 com.top_logic.tool.export.PowerpointExportHandler = Powerpoint-Export-Handler
 com.top_logic.tool.export.PowerpointExportHandler.tooltip = Handler für den Export von Powerpoint-Berichten
 com.top_logic.tool.export.WordExportHandler = Word-Export-Handler
