--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -3944,6 +3944,8 @@ com.top_logic.layout.provider.ConfiguredProxyResourceProvider.tooltip = Configur
 com.top_logic.layout.provider.LabelProviderService = Label provider service
 com.top_logic.layout.provider.LabelProviderService$ContextMenuConfig = Context menu configuration
 com.top_logic.layout.provider.LabelProviderService$ContextMenuConfig.tooltip = Type-specific context menu commands configuration.
+com.top_logic.layout.provider.LabelProviderService$ExcelCellRendererConfig = Excel cell renderer configuration
+com.top_logic.layout.provider.LabelProviderService$ExcelCellRendererConfig.tooltip = <i>Excel cell renderer</i> assignment to a <code>"type"</code>.
 com.top_logic.layout.provider.LabelProviderService$MappingConfig = Mapping configuration
 com.top_logic.layout.provider.LabelProviderService$MappingConfig.tooltip = <i>Mapping</i> assignment to a <code>"type"</code>.
 com.top_logic.layout.provider.LabelProviderService$PDFRendererConfig = PDF renderer configuration
@@ -3958,6 +3960,8 @@ com.top_logic.layout.provider.LabelProviderService.Config.context-menus = Contex
 com.top_logic.layout.provider.LabelProviderService.Config.context-menus.tooltip = Configuration of type-specific context menu entries.
 com.top_logic.layout.provider.LabelProviderService.Config.default-provider = Default provider
 com.top_logic.layout.provider.LabelProviderService.Config.default-provider.tooltip = The provider to use, if none is found otherwise.
+com.top_logic.layout.provider.LabelProviderService.Config.excel-renderers = Excel renderers
+com.top_logic.layout.provider.LabelProviderService.Config.excel-renderers.tooltip = Configured <i>Excel cell renderers</i> for types.
 com.top_logic.layout.provider.LabelProviderService.Config.label-providers = Label providers
 com.top_logic.layout.provider.LabelProviderService.Config.label-providers.tooltip = Configured <i>label providers</i> for types. <p> The <i>label providers</i> defined in this section are used when the context requests only a plain label (no type image or link). If no <i>label provider</i> is found in this section for a certain type, a <i>resource provider</i> from <i>Resource providers</i> is used as fallback before considering a <i>label provider</i> for a super type. </p>
 com.top_logic.layout.provider.LabelProviderService.Config.mappings = Mappings
@@ -3970,6 +3974,8 @@ com.top_logic.layout.provider.LabelProviderService.Config.resource-providers = R
 com.top_logic.layout.provider.LabelProviderService.Config.resource-providers.tooltip = Configured <i>resource providers</i> for types. <p> The <i>resource providers</i> defined in this section are used when the context requests more than a plain label. If no <i>resource provider</i> is found in this section for a certain type, a <i>label provider</i> from <i>Label providers</i> is used as fallback before considering a <i>resource provider</i> for a super type. Therefore, it might be reasonable to define a custom <i>resource provider</i> for a certain type, if the <i>label provider</i> defined for that type is not de-facto a <i>resource provider</i>. </p>
 com.top_logic.layout.provider.LabelProviderService.ContextMenuConfig.commands = Commands
 com.top_logic.layout.provider.LabelProviderService.ContextMenuConfig.commands.tooltip = Type-specific commands to add to context menus for the given <i>Type</i>.
+com.top_logic.layout.provider.LabelProviderService.ExcelCellRendererConfig.implementation = Implementation
+com.top_logic.layout.provider.LabelProviderService.ExcelCellRendererConfig.implementation.tooltip = The <i>Excel cell renderer</i> implementation for the given <i>Type</i>.
 com.top_logic.layout.provider.LabelProviderService.MappingConfig.implementation = Implementation
 com.top_logic.layout.provider.LabelProviderService.MappingConfig.implementation.tooltip = The <i>mapping</i> implementation for the given <i>Type</i>.
 com.top_logic.layout.provider.LabelProviderService.PDFRendererConfig.implementation = Implementation
@@ -8312,6 +8318,10 @@ com.top_logic.tool.export.FormattedValueExcelRenderer = Formatted value Excel re
 com.top_logic.tool.export.FormattedValueExcelRenderer.Config.format = Format
 com.top_logic.tool.export.FormattedValueExcelRenderer.Config.format.tooltip = The data format for the excel cell.
 com.top_logic.tool.export.FormattedValueExcelRenderer.tooltip = <i>Excel cell renderer</i> that creates a <i>Excel value</i> with a given. <p> It is expected that the value of the table model is a simple value, e.g. <i>Double</i>, <i>string</i>, or <i>date</i>. Complex values like <i>collection</i> or <i>form field</i> are not supported. </p>
+com.top_logic.tool.export.MappingExcelCellRenderer = Mapping Excel cell renderer
+com.top_logic.tool.export.MappingExcelCellRenderer.Config.excel-mapping = Excel mapping
+com.top_logic.tool.export.MappingExcelCellRenderer.Config.excel-mapping.tooltip = The export mapping to apply.
+com.top_logic.tool.export.MappingExcelCellRenderer.tooltip = Export of account values to Excel including the login name.
 com.top_logic.tool.export.PowerpointExportHandler = Powerpoint export handler
 com.top_logic.tool.export.PowerpointExportHandler.tooltip = Handler for export of powerpoint reports
 com.top_logic.tool.export.WordExportHandler = Word export handler
