Ticket #28606: Bugfix: Do not fail when configured value is not of type WithExpression. In that case the actual implementation class is written.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -40,6 +40,9 @@ class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_PA
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_PARAMETERS_COLUMN_TYPE = Typ
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_PARAMETERS_HEADER = Parameter
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_SYNTAX_HEADER = Syntax
+class.com.top_logic.model.search.form.I18NConstants.ERROR_INVALID_IMAGE_DEFINITION__SOURCE__POSITION = Ungültiges Vorschaubild an Position {1}: {0}
+class.com.top_logic.model.search.form.I18NConstants.ERROR_NO_IMAGE__OBJ = {0} ist kein Vorschaubild.
+class.com.top_logic.model.search.form.I18NConstants.INVALID_IMPLEMENTATION_CLASS__CLASS = Ungültige konfigurierte Klasse {0}.
 class.com.top_logic.model.search.providers.I18NConstants.CREATE_OBJECT_DEFAULT_LABEL = Objekt erstellen
 class.com.top_logic.model.search.providers.I18NConstants.CREATE_OBJECT_DEFAULT_LABEL.help = Standardbeschriftung für das Öffnen eines generischen Erstellungsdialogs.
 class.com.top_logic.model.search.providers.I18NConstants.ERROR_MODE__VALUE_OPTIONS = Ungültiger Feldmodus "{0}", mögliche Werte sind: {1}
