--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -40,6 +40,9 @@ class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_PA
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_PARAMETERS_COLUMN_TYPE = Type
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_PARAMETERS_HEADER = Parameters
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_SYNTAX_HEADER = Syntax
+class.com.top_logic.model.search.form.I18NConstants.ERROR_INVALID_IMAGE_DEFINITION__SOURCE__POSITION = Invalid preview image at position {1}: {0}
+class.com.top_logic.model.search.form.I18NConstants.ERROR_NO_IMAGE__OBJ = {0} is no preview image.
+class.com.top_logic.model.search.form.I18NConstants.INVALID_IMPLEMENTATION_CLASS__CLASS = Invalid configured class {0}.
 class.com.top_logic.model.search.providers.I18NConstants.CREATE_OBJECT_DEFAULT_LABEL = Create Object
 class.com.top_logic.model.search.providers.I18NConstants.CREATE_OBJECT_DEFAULT_LABEL.help = Default label for opening a generic create dialog.
 class.com.top_logic.model.search.providers.I18NConstants.ERROR_MODE__VALUE_OPTIONS = Invalid field mode "{0}", possible values are: {1}
