Ticket #28606: Added example for an own implementation class as dynamic label implementation.

--- a/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.DemoTypes.messages_de.properties
+++ b/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.DemoTypes.messages_de.properties
@@ -85,6 +85,7 @@ model.DemoTypes.DemoTypes.A.idLong = Id long
 model.DemoTypes.DemoTypes.A.idString = Id string
 model.DemoTypes.DemoTypes.A.inlineReference = inlineReference
 model.DemoTypes.DemoTypes.A.inlineReferenceReverse = inlineReferenceReverse
+model.DemoTypes.DemoTypes.A.intConstraint = intConstraint
 model.DemoTypes.DemoTypes.A.intList = Int list
 model.DemoTypes.DemoTypes.A.intListDerived = Int list derived
 model.DemoTypes.DemoTypes.A.json = JSON
@@ -207,6 +208,7 @@ model.DemoTypes.DemoTypes.X.i18NStringMultiLine = i18NStringMultiLine
 model.DemoTypes.DemoTypes.X.i18NStringNormal = i18NStringNormal
 model.DemoTypes.DemoTypes.X.i18NStringShortLength = i18NStringShortLength
 model.DemoTypes.DemoTypes.X.inlineReference = inlineReference
+model.DemoTypes.DemoTypes.X.intConstraint = intConstraint
 model.DemoTypes.DemoTypes.X.list = list
 model.DemoTypes.DemoTypes.X.long = long
 model.DemoTypes.DemoTypes.X.longConstraint = longConstraint
