--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -8321,7 +8321,7 @@ com.top_logic.tool.export.FormattedValueExcelRenderer.tooltip = <i>Excel cell re
 com.top_logic.tool.export.MappingExcelCellRenderer = Mapping Excel cell renderer
 com.top_logic.tool.export.MappingExcelCellRenderer.Config.excel-mapping = Excel mapping
 com.top_logic.tool.export.MappingExcelCellRenderer.Config.excel-mapping.tooltip = The export mapping to apply.
-com.top_logic.tool.export.MappingExcelCellRenderer.tooltip = Export of account values to Excel including the login name.
+com.top_logic.tool.export.MappingExcelCellRenderer.tooltip = <i>Excel cell renderer</i> that applies an <i>Excel mapping</i> to values before export.
 com.top_logic.tool.export.PowerpointExportHandler = Powerpoint export handler
 com.top_logic.tool.export.PowerpointExportHandler.tooltip = Handler for export of powerpoint reports
 com.top_logic.tool.export.WordExportHandler = Word export handler
