--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -8321,7 +8321,7 @@ com.top_logic.tool.export.FormattedValueExcelRenderer.tooltip = <i>Excel-Zellen-
 com.top_logic.tool.export.MappingExcelCellRenderer = Abbildung von Excel-Zellrenderer
 com.top_logic.tool.export.MappingExcelCellRenderer.Config.excel-mapping = Excel-Abbildung
 com.top_logic.tool.export.MappingExcelCellRenderer.Config.excel-mapping.tooltip = Die anzuwendende Abbildung für den Export.
-com.top_logic.tool.export.MappingExcelCellRenderer.tooltip = Export von Kontowerten nach Excel einschließlich des Anmeldenamens.
+com.top_logic.tool.export.MappingExcelCellRenderer.tooltip = <i>Excel-Zell-Renderer</i>, der vor dem Export eine <i>Excel-Abbildung</i> auf die Werte anwendet.
 com.top_logic.tool.export.PowerpointExportHandler = Powerpoint-Export-Handler
 com.top_logic.tool.export.PowerpointExportHandler.tooltip = Handler für den Export von Powerpoint-Berichten
 com.top_logic.tool.export.WordExportHandler = Word-Export-Handler
