Ticket #24649: Allow to transform images.

--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
@@ -58,6 +58,24 @@ com.top_logic.graphic.flow.data.ImageAlign.X_MIN_YMID.tooltip = Erzwingt eine ei
 com.top_logic.graphic.flow.data.ImageAlign.X_MIN_YMIN = X minimal ymin
 com.top_logic.graphic.flow.data.ImageAlign.X_MIN_YMIN.tooltip = Erzwingt eine einheitliche Skalierung. Richten Sie die <code>min-x</code> der <code>viewBox</code> des Elements am kleinsten X-Wert des Ansichtsfensters aus. Richten Sie die <code>min-y</code> der <code>viewBox</code> des Elements am kleinsten Y-Wert des Ansichtsfensters aus.
 com.top_logic.graphic.flow.data.ImageAlign.tooltip = Ausrichten eines Bildes innerhalb eines Rahmens.
+com.top_logic.graphic.flow.data.ImageOrientation = Bildausrichtung
+com.top_logic.graphic.flow.data.ImageOrientation.FLIP_H = Horizontal spiegeln
+com.top_logic.graphic.flow.data.ImageOrientation.FLIP_H.tooltip = Das Bild wird horizontal gespiegelt.
+com.top_logic.graphic.flow.data.ImageOrientation.FLIP_H_ROTATE_270 = Horizontal spiegeln und drehen um 270°
+com.top_logic.graphic.flow.data.ImageOrientation.FLIP_H_ROTATE_270.tooltip = Das Bild wird horizontal gespiegelt und um 270° gegen den Uhrzeigersinn gedreht.
+com.top_logic.graphic.flow.data.ImageOrientation.FLIP_H_ROTATE_90 = Horizontal spiegeln und drehen 90°
+com.top_logic.graphic.flow.data.ImageOrientation.FLIP_H_ROTATE_90.tooltip = Das Bild wird horizontal gespiegelt und um 90° gegen den Uhrzeigersinn gedreht.
+com.top_logic.graphic.flow.data.ImageOrientation.FLIP_V = Vertikal spiegeln
+com.top_logic.graphic.flow.data.ImageOrientation.FLIP_V.tooltip = Das Bild wird vertikal gespiegelt.
+com.top_logic.graphic.flow.data.ImageOrientation.NORMAL = Normal
+com.top_logic.graphic.flow.data.ImageOrientation.NORMAL.tooltip = Das Bild wird so angezeigt, wie es in den Bilddaten kodiert ist.
+com.top_logic.graphic.flow.data.ImageOrientation.ROTATE_180 = Drehen um 180°
+com.top_logic.graphic.flow.data.ImageOrientation.ROTATE_180.tooltip = Das Bild wird um 180° gedreht.
+com.top_logic.graphic.flow.data.ImageOrientation.ROTATE_270 = Drehen um 270°
+com.top_logic.graphic.flow.data.ImageOrientation.ROTATE_270.tooltip = Das Bild wird um 270° gegen den Uhrzeigersinn gedreht.
+com.top_logic.graphic.flow.data.ImageOrientation.ROTATE_90 = Drehen um 90°
+com.top_logic.graphic.flow.data.ImageOrientation.ROTATE_90.tooltip = Das Bild wird um 90° gegen den Uhrzeigersinn gedreht.
+com.top_logic.graphic.flow.data.ImageOrientation.tooltip = Bildumwandlung.
 com.top_logic.graphic.flow.data.ImageScale = Bildmaßstab
 com.top_logic.graphic.flow.data.ImageScale.MEET = Treffen Sie
 com.top_logic.graphic.flow.data.ImageScale.MEET.tooltip = Skaliert die Grafik so, dass: <ul> <li>Das Seitenverhältnis bleibt erhalten.</li> <li>Die gesamte <code>viewBox</code> ist innerhalb des Ansichtsfensters sichtbar.</li> <li>Die <code>viewBox</code> wird so weit wie möglich nach oben skaliert, wobei die anderen Kriterien weiterhin erfüllt werden.</li> </ul> <p> Wenn in diesem Fall das Seitenverhältnis der Grafik nicht mit dem Ansichtsfenster übereinstimmt, reicht ein Teil des Ansichtsfensters über die Grenzen der <code>viewBox</code> hinaus (d. h. der Bereich, in den die <code>viewBox</code> gezeichnet wird, ist kleiner als das Ansichtsfenster). meet </p>
