Ticket #28593: Added TableConfigurationProvider that creates a select column which uses a TreeSelectionModel.

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -141,6 +141,7 @@ class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_N
 class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_NAME_AVAILABLE = The property {1} is not defined on {0}. Available properties are: {2}
 class.com.top_logic.layout.window.I18NConstants.WINDOW_TEMPLATE_INSTANTIATION_FAILED__TEMPLATE = Opening the window failed.
 class.com.top_logic.layout.window.I18NConstants.WINDOW_TEMPLATE_INSTANTIATION_FAILED__TEMPLATE.tooltip = The expansion of template "{0}" failed.
+class.com.top_logic.mig.html.layout.I18NConstants.DUPLICATE_CHANNEL_NAME__NAME = There is already a channel with name {0}.
 class.com.top_logic.mig.html.layout.I18NConstants.OUTER_REFERENCES_DELETION_ERROR__LAYOUTS = Component cannot be deleted because outer components reference it: {0}
 class.com.top_logic.mig.html.layout.I18NConstants.STORE_FOR_MODEL = Would you like to set the form as the standard form of this type? <p> Note: The standard form for a type is stored as annotation at the type, not within the displaying component. Updating the standard form of a type updates all forms displaying that type that does not define a specialized form. </p>
 class.com.top_logic.model.I18NConstants.DUPLICATE_ATTRIBUTE__NAME_CLASS = Attribute with name "{0}" already exists in type "{1}".
@@ -2462,6 +2463,12 @@ com.top_logic.layout.buttonbar.Icons.BUTTON_BAR_TEMPLATE = Template for renderin
 com.top_logic.layout.buttonbar.Icons.SLIDER_IMG = Image to display when the command is a long running command.
 com.top_logic.layout.channel.BidirectionalTransformLinking = Bidirectional transform linking
 com.top_logic.layout.channel.BidirectionalTransformLinking.tooltip = Linking creating a bidirectional transforming channel. Using an inverse transformation to determine the value for the source channel.
+com.top_logic.layout.channel.DefaultChannelFactory = Default channel
+com.top_logic.layout.channel.DefaultChannelFactory.tooltip = Channel that contains a single object as value.
+com.top_logic.layout.channel.ListChannelFactory = List-valued channel
+com.top_logic.layout.channel.ListChannelFactory.tooltip = Channel that contains a list of objects as value.
+com.top_logic.layout.channel.SetChannelFactory = Set-valued channel
+com.top_logic.layout.channel.SetChannelFactory.tooltip = Channel that contains a set of objects as value.
 com.top_logic.layout.channel.linking.Channel.component-ref = Component reference
 com.top_logic.layout.channel.linking.Channel.component-ref.tooltip = Specification of the component to access the specified <i>Name</i> from.
 com.top_logic.layout.channel.linking.Channel.name = Name
@@ -4430,6 +4437,8 @@ com.top_logic.layout.scripting.recorder.ref.ExternalDataValue.url.tooltip = The 
 com.top_logic.layout.scripting.recorder.ref.FileManagerDataValue = File manager data value
 com.top_logic.layout.scripting.recorder.ref.FileManagerDataValue.name.tooltip = The path to the <i>file</i>. <p> Resolved with the <i>file manager</i>, after the <i>alias manager</i> replaced aliases. </p>
 com.top_logic.layout.scripting.recorder.ref.FileManagerDataValue.tooltip = <i>Data item value</i> that uses the <i>file manager</i> to find the requested <i>file</i>.
+com.top_logic.layout.scripting.recorder.ref.GenericModelOwner$MultipleAnnotatedModels = Multiple annotated models
+com.top_logic.layout.scripting.recorder.ref.GenericModelOwner$MultipleAnnotatedModels.tooltip = Algorithm to get model with a given name from a <i>typed annotatable</i>. <p> This algorithm can be used to create a <i>generic model owner</i> when the model can be attached to a recordable <i>typed annotatable</i>. </p>
 com.top_logic.layout.scripting.recorder.ref.GenericModelOwnerNaming.GenericModelName.algorithm = Algorithm
 com.top_logic.layout.scripting.recorder.ref.GenericModelOwnerNaming.GenericModelName.algorithm-name = Algorithm name
 com.top_logic.layout.scripting.recorder.ref.GenericModelOwnerNaming.GenericModelName.algorithm-name.tooltip = ResKey, attached to algorithm of <i>Algorithm</i>. Typically provided by <i>resource key from class</i>, that is using algorithm's full qualified class name for translation.
@@ -6013,6 +6022,10 @@ com.top_logic.layout.table.model.TableExportProvider = Table export
 com.top_logic.layout.table.model.TableExportProvider.Config.export = Export
 com.top_logic.layout.table.model.TableExportProvider.Config.export.tooltip = Export configuration that describes the table export to add.
 com.top_logic.layout.table.model.TableExportProvider.tooltip = Configurable <i>table configuration plug-in</i> that adds an <i>table data export</i> to a <i>table configuration</i>.
+com.top_logic.layout.table.model.TreeSelectColumnProvider = Tree select column
+com.top_logic.layout.table.model.TreeSelectColumnProvider.Config.channel = Channel
+com.top_logic.layout.table.model.TreeSelectColumnProvider.Config.channel.tooltip = The <i>component channel</i> to get the value for the selection model for. <p> It is expected that the channel contains as value a set of paths of objects, started from the root node to the actually selected node. </p>
+com.top_logic.layout.table.model.TreeSelectColumnProvider.tooltip = <i>Table configuration plug-in</i> adding a column that displays the selection of a tree selection model.
 com.top_logic.layout.table.model.WithColumnCssClasses.cssClass = Css class
 com.top_logic.layout.table.model.WithColumnCssClasses.cssClass.tooltip = Static CSS class to apply to all content cells of a column. <p> There are a number of pre-defined CSS classes for highlighting: </p> <ul> <li><code>tl-info</code></li> <li><code>tl-success</code></li> <li><code>tl-warning</code></li> <li><code>tl-danger</code></li> <li><code>tl-debug</code></li> <li><code>tl-accent-1</code></li> <li><code>tl-accent-2</code></li> <li><code>tl-accent-3</code></li> </ul> <p> All these classes can be combined with the class <code>tl-lighter</code> to make the highlighting less prominent. </p>
 com.top_logic.layout.table.model.WithColumnCssClasses.cssClassGroupFirst = Css class group first
@@ -6159,6 +6172,12 @@ com.top_logic.layout.table.tree.TreeTableContextMenuProvider = Tree table contex
 com.top_logic.layout.table.tree.TreeTableContextMenuProvider.tooltip = <i>Selectable context menu provider</i> choosing <i>tree table context menu factory</i> by default.
 com.top_logic.layout.table.tree.TreeTableExpandCollapseAll = Tree table expand collapse all
 com.top_logic.layout.table.tree.TreeTableExpandCollapseAll.tooltip = Expands all nodes in the <i>tree table component</i>.
+com.top_logic.layout.table.tree.TreeTableNodeLabelNaming$Name = {foreach(path, " > ")}
+com.top_logic.layout.table.tree.TreeTableNodeLabelNaming$Name.tooltip = <i>Model name</i> for the <i>tree table node label naming</i>.
+com.top_logic.layout.table.tree.TreeTableNodeLabelNaming.Name.component = Component
+com.top_logic.layout.table.tree.TreeTableNodeLabelNaming.Name.component.tooltip = Reference to the tree table.
+com.top_logic.layout.table.tree.TreeTableNodeLabelNaming.Name.path = Path
+com.top_logic.layout.table.tree.TreeTableNodeLabelNaming.Name.path.tooltip = Path of labels from the root to the referenced node.
 com.top_logic.layout.table.tree.UpdateTreeTableCommandHandler = Update tree table command handler
 com.top_logic.layout.table.tree.UpdateTreeTableCommandHandler.tooltip = An <i>command handler</i> that updates its <i>tree table component</i>.
 com.top_logic.layout.table.tree.compare.AbstractCompareModeCommand = Compare mode command
@@ -6701,6 +6720,15 @@ com.top_logic.mig.html.layout.SingleLayoutContainer.Config.component.tooltip = C
 com.top_logic.mig.html.layout.SingleLayoutContainer.tooltip = <i>Layout container</i> holding at most one child.
 com.top_logic.mig.html.layout.SubComponentConfig.components = Components
 com.top_logic.mig.html.layout.SubComponentConfig.components.tooltip = Sub-component configurations.
+com.top_logic.mig.html.layout.WithChannelConfigs$ChannelConfig = Channel configuration
+com.top_logic.mig.html.layout.WithChannelConfigs$ChannelConfig.tooltip = Configuration of an in app channel.
+com.top_logic.mig.html.layout.WithChannelConfigs.ChannelConfig.impl = Implementation
+com.top_logic.mig.html.layout.WithChannelConfigs.ChannelConfig.impl.tooltip = The channel implementation which is created with the given name.
+com.top_logic.mig.html.layout.WithChannelConfigs.ChannelConfig.name.tooltip = The name of the channel created by <i>Implementation</i>.
+com.top_logic.mig.html.layout.WithChannelConfigs.ChannelConfig.value = Value
+com.top_logic.mig.html.layout.WithChannelConfigs.ChannelConfig.value.tooltip = The initial value for the new channel.
+com.top_logic.mig.html.layout.WithChannelConfigs.additional-channels = Additional channels
+com.top_logic.mig.html.layout.WithChannelConfigs.additional-channels.tooltip = Configuration for additional channels. <p> The values are pairs of <i>type</i> name's and <i>component names</i>. When an object of the type (or a specialization) is displayed, the configured target component is used as goto target by default. </p>
 com.top_logic.mig.html.layout.WithDefaultFor.defaultFor = Default for
 com.top_logic.mig.html.layout.WithDefaultFor.defaultFor.tooltip = For the configured types, this component is the default view. <p> The default view for a type is opened, whenever an object of that type is opened through a link. </p>
 com.top_logic.mig.html.layout.WithGotoConfiguration$GotoTarget = Goto target
